tests/NormalTests/paczka2/big_fuzzy/37755450.err
Error in line 4: fCgvOCQ A317 65,2
Error in line 9: McBZ9H A114 33,4
Error in line 6: A114 A317 75,1
Error in line 18: A114 A114 45,8
Error in line 28: RGVSIO A317 91,9
Error in line 29: RGVSIO S57 80,5
Error in line 42: fCgvOCQ A114 62,4
Error in line 44: fCgvOCQ A317 36,1
Error in line 46: fCgvOCQ S499 17,4
Error in line 30: 7i71hlf07v S57 44,6
Error in line 50: fCgvOCQ A114 58,0
Error in line 36: HPi A317 22,6
Error in line 86: dJ0mAsJ S57 14,9
Error in line 91: RGVSIO A317 63,1
Error in line 101: HPi A317 255,6
Error in line 112: fCgvOCQ S499 68,6
Error in line 115: HPi A114 82,3
Error in line 107: A114 A114 31,6
Error in line 127: fCgvOCQ S57 4,9
Error in line 134: McBZ9H A114 44,6
Error in line 139: McBZ9H S57 16,7
Error in line 153: dJ0mAsJ A114 85,7
Error in line 157: McBZ9H S499 52,8
Error in line 166: dJ0mAsJ S499 0,5
Error in line 167: dJ0mAsJ S57 90,2
Error in line 176: HPi S57 84,6
Error in line 178: fCgvOCQ S499 46,3
Error in line 183: A114 S499 19,2
Error in line 184: 7i71hlf07v S499 108,3
Error in line 195: HPi S499 0,2
Error in line 197: dJ0mAsJ S499 52,0
Error in line 188: A114 A114 44,9
Error in line 198: RGVSIO A317 38,2
Error in line 205: HPi A114 -4,0
Error in line 200: A114 S499 55,5
Error in line 215: McBZ9H S57 99,5
Error in line 218: McBZ9H A317 47,1
Error in line 235: RGVSIO S499 98,9
Error in line 236: RGVSIO A317 15,3
Error in line 237: RGVSIO A114 13,2
Error in line 242: fCgvOCQ S499 42,6
Error in line 244: dJ0mAsJ S499 128,4
